--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -16,3 +16,49 @@ body {
     background-color: white;
     height: 100vh;
 }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 5%;
+    height: 85px;
+    list-style: none;
+    font-size: 25px;
+}
+
+.logo {
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+}
+
+.logogo {
+    height: 45px;
+    padding-left: 11px;
+}
+
+.logotxt {
+    padding: none;
+    font-size: 15px;
+}
+
+.boton1 {
+    font-size: 25px;
+    background-color: black;
+    color: white;
+    border-radius: 7px;
+    border: none;
+    padding: 10px 25px;
+    cursor: pointer;
+}
+
+li {
+    list-style: none;
+}
+
+.navbar .links {
+    display: flex;
+    gap: 55px;
+}
